<resources>
    <string name="app_name">Band Test</string>
    <string name="unknown_device">Unknown device</string>
    <string name="test">Manual test</string>
    <string name="disconnect_ble">Disconnect</string>
    <string name="search_ble">Search</string>
    <string name="re_search">Re search</string>
    <string name="sort">Sort</string>
    <string name="stop">Stop it</string>
    <string name="device_list">Device list</string>
    <string name="not_support">Bluetooth is not supported</string>
    <string name="need_location">Required position permission</string>
    <string name="location_warn">Allow access to location information, otherwise some functions will not work properly!</string>
    <string name="function_limited">Functional limitation</string>
    <string name="location_refused">Since the access location permissions are not granted, part of the functionality of the application will be limited.</string>
    <string name="find_braclet">Motor test</string>
    <string name="screen_show">Screen display test</string>
    <string name="text">Chinese Fonts</string>
    <string name="rssi">RSSI</string>
    <string name="button">Button test</string>
    <string name="battery">Charge / battery</string>
    <string name="three_six">Three axis / six axis sensor</string>
    <string name="heart_senor">Heart rate sensor</string>
    <string name="heart_test">Measuring heart rate</string>
    <string name="clear_data">Clear data</string>
    <string name="restore">Restore factory settings</string>
    <string name="hr_single_measurement">Single heart rate measurement</string>
    <string name="hr_real_time_measurement">Real-time heart rate measurement</string>
    <string name="oxygen_single_measurement">Blood oxygen single measurement</string>
    <string name="oxygen_real_time_measurement">Real-time blood oxygen measurement</string>
    <string name="bp_single_measurement">Blood pressure measurement</string>
    <string name="bp_real_time_measurement">Real-time blood pressure measurement</string>
    <string name="pull_to_refresh">Pull down to get data</string>
    <string name="clockwise">Pointer clockwise</string>
    <string name="anti_clockwise">Counter clockwise</string>
    <string name="stop_pointer">Stop pointer</string>
    <string name="ecg_data">Test ECG data</string>
    <string name="ecg_test_data">ECG data</string>
    <string name="simulate_data">Analog data</string>
    <string name="warn">Notice</string>
    <string name="sure">Are you sure you want to clean up the data?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Determine</string>
    <string name="restore_factory">Are you sure you want to restore factory settings?</string>
    <string name="disconnect">Bracelet not connected</string>
    <string name="disconnect2">Not connected</string>
    <string name="no_press">Not pressed</string>
    <string name="press">Press</string>
    <string name="no_charge">Uncharged</string>
    <string name="electricity">Electricity quantity:</string>
    <string name="charging">Charging</string>
    <string name="abnormal_communication">Abnormal communication</string>
    <string name="Initialization_unsuccessful">Initialization unsuccessful</string>
    <string name="Initialize_successfully">Initialize successfully</string>
    <string name="communication_normal">Communication normal</string>
    <string name="clear">Eliminate</string>
    <string name="generate">Generate</string>
    <string name="shake_to_photo">Shake to take a picture</string>
    <string name="anti_lost">Anti lost</string>
    <string name="version_code">Version code</string>
    <string name="sync_time">Synchronization time</string>
    <string name="fall">Fall</string>
    <string name="hr_one">Single heart rate measurement</string>
    <string name="real_time">Real-time heart rate measurement</string>
    <string name="ho_once">Blood oxygen single measurement</string>
    <string name="ho_real_time">Real-time blood oxygen measurement</string>
    <string name="bp_once">Blood pressure measurement</string>
    <string name="bp_real_time">Real-time blood pressure measurement</string>
    <string name="not_connected">Not connected</string>
    <string name="avaliable_gps">please open GPS！</string>
    <string name="notify">Prompt</string>
    <string name="common_sure">OK</string>
    <string name="pray">Halla prayer</string>
    <string name="get_Token">GetToken</string>
    <string name="get_laststep">GetLastSteps</string>
    <string name="get_allstep">GetAllSteps</string>
    <string name="id_0_4">Prayer name 0-4</string>
    <string name="switch_0_1">switch 0-1</string>
    <string name="start_h_0_23">startH 0-23</string>
    <string name="statr_m_0_59">startM 0-59</string>
    <string name="end_h_0_23">endH 0-23</string>
    <string name="end_m_0_59">endM 0-59</string>
    <string name="repeat_0_10">Kneel times 0-10</string>

    <string name="sunday">SUNDAY</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="change_date">Change Date</string>
    <string name="find_band">Find Band</string>
    <string name="refresh_data">Refresh Data</string>



    <string-array name="setRemindertype">
        <item>Prayers</item>
        <item>Medicine</item>
        <item>Walking</item>
    </string-array>

    <string name="popup_title">Quit BandTest</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
</resources>
